# High-Performance-Logging-System

./: CMakeLists.txt  README.md
include/: logger.hpp  mmap_writer.hpp  rigtorps_spsc_queue.hpp  spsc_queue.hpp  spsc_queue1.hpp
src/: .mmap_writer.cpp.swp  logger.cpp  mmap_create.cpp  mmap_general.cpp  mmap_read.cpp  mmap_update.cpp  mmap_writer.cpp  simd_parser.cpp  spsc_queue.cpp
tests/: test_spsc_queue.cpp
